--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
           <div id="header" class="header">
             <h1>Engineering Toolz</h1>
           </div>
+          <div class="box">
+            <div class="quantitySelector"><form>
+              
+            </form></div>
+            <div class="input fromTo">
+              <p>From:</p>
+              <div class=""></div>
+            </div>
+            <br>
+            <div class="output fromTo"><p>To:</p></div>
+          </div>
       </body>
 </html>
