--- a/index.html
+++ b/index.html
@@ -13,15 +13,43 @@
             <h1>Engineering Toolz</h1>
           </div>
           <div class="box">
-            <div class="quantitySelector"><form>
-              
+            <div><form class="form">
+              <select id="quantitySelect" name="quantitySelect" class="quantitySelector">
+                <option value="Length">Length</option>
+                <option value="Pressure">Pressure</option>
+                <option value="Mass">Mass</option>
+                <option value="Temperature">Temperature</option>
+              </select>
             </form></div>
             <div class="input fromTo">
               <p>From:</p>
-              <div class=""></div>
+              <div class="fromInput">
+                <form>
+                  <input type="number" class="inputText" id="num1">
+                  <select class="unitSelect">
+                    <option value="Metre">Metre</option>
+                    <option value="Feet">Feet</option>
+                    <option value="Yards">Yards</option>
+                    <option value="Miles">Miles</option>
+                  </select>
+                </form>
+              </div>
             </div>
             <br>
-            <div class="output fromTo"><p>To:</p></div>
+            <div class="output fromTo">
+              <p>To:</p>
+              <div class="toInput">
+                <form>
+                  <input type="number" class="inputText" id="num2">
+                  <select class="unitSelect">
+                    <option value="Metre">Metre</option>
+                    <option value="Feet">Feet</option>
+                    <option value="Yards">Yards</option>
+                    <option value="Miles">Miles</option>
+                  </select>
+                </form>
+              </div>
+            </div>
           </div>
       </body>
 </html>
