--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
               <p>To:</p>
               <div class="toInput">
                 <form>
-                  <input class="inputText" id="num2" placeholder="0"></input>
-                  <select class="unitSelect">
-                    <option value="Metre">Metre</option>
-                    <option value="Feet">Feet</option>
-                    <option value="Yards">Yards</option>
-                    <option value="Miles">Miles</option>
+                  <input class="inputText" id="num2" placeholder=""></input>
+                  <select class="unitSelect" id="outputUnitSelect">
+                    <option value="metre">Metre</option>
+                    <option value="feet">Feet</option>
+                    <option value="mards">Yards</option>
+                    <option value="miles">Miles</option>
                   </select>
                 </form>
               </div>
             </div>
           </div>
           <div>
-            <button onclick="convert()">Convert</button>
+            <button  type="button" onclick="convert()">Convert</button>
           </div>
       </body>
 </html>
