converter is now functional.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <div class="box">
             <div><form class="form">
-              <select id="quantitySelect" name="quantitySelect" class="quantitySelector">
+              <select id="quantitySelect" class="quantitySelector">
                 <option value="length">Length</option>
                 <option value="pressure">Pressure</option>
                 <option value="mass">Mass</option>
