--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <div class="box">
             <div><form class="form">
-              <select id="quantitySelect" class="quantitySelector">
+              <select id="quantitySelect" class="quantitySelector" onchange="unitSet()">
                 <option value="length">Length</option>
                 <option value="pressure">Pressure</option>
                 <option value="mass">Mass</option>
@@ -25,7 +25,7 @@
               <p>From:</p>
               <div class="fromInput">
                 <form>
-                  <input type="number" class="inputText" id="num1"></input>
+                  <input type="number" class="inputText" id="num1" onchange="convert()"></input>
                   <select class="unitSelect" id="inputUnitSelect">
                     <option value="metre">Metre</option>
                     <option value="feet">Feet</option>
@@ -44,15 +44,15 @@
                   <select class="unitSelect" id="outputUnitSelect">
                     <option value="metre">Metre</option>
                     <option value="feet">Feet</option>
-                    <option value="mards">Yards</option>
+                    <option value="yards">Yards</option>
                     <option value="miles">Miles</option>
                   </select>
                 </form>
               </div>
             </div>
           </div>
-          <div>
-            <button  type="button" onclick="convert()">Convert</button>
+          <div class="convert-button-div">
+            <button  type="button" onclick="convert()" class="convert-button">Convert</button>
           </div>
       </body>
 </html>
